[gd_scene load_steps=9 format=3 uid="uid://gyu45fs0qg5m"]

[ext_resource type="Script" uid="uid://chex2khqaljgb" path="res://ui/components/TreasuryHUD.gd" id="2_75jlc"]
[ext_resource type="Theme" uid="uid://63duv3n1vwhg" path="res://ui/themes/VikingDynastyTheme.tres" id="2_uwsq3"]
[ext_resource type="Texture2D" uid="uid://d08kc6hrja6ev" path="res://ui/assets/res_gold.png" id="3_7ds4s"]
[ext_resource type="Texture2D" uid="uid://m6tx1fv7imra" path="res://ui/assets/res_wood.png" id="4_atp58"]
[ext_resource type="Texture2D" uid="uid://ck3gpx751ywcw" path="res://ui/assets/res_food.png" id="5_ginhg"]
[ext_resource type="Texture2D" uid="uid://denkxl6ex742y" path="res://ui/assets/res_stone.png" id="6_6xg1l"]
[ext_resource type="Texture2D" uid="uid://cukqh3t2wkmua" path="res://ui/assets/res_peasant.png" id="7_fo3c6"]
[ext_resource type="Texture2D" uid="uid://day6g5ykwqgyb" path="res://ui/assets/res_thrall.png" id="8_w1kt5"]

[node name="TreasuryHUD" type="PanelContainer"]
modulate = Color(1, 1, 1, 0.8627451)
custom_minimum_size = Vector2(0, 60)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
mouse_filter = 2
theme = ExtResource("2_uwsq3")
script = ExtResource("2_75jlc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 40
alignment = 1

[node name="TreasuryDisplay" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 15

[node name="GoldIcon" type="TextureRect" parent="HBoxContainer/TreasuryDisplay"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("3_7ds4s")
expand_mode = 1
stretch_mode = 5

[node name="GoldLabel" type="Label" parent="HBoxContainer/TreasuryDisplay"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Gold: 0"

[node name="WoodIcon" type="TextureRect" parent="HBoxContainer/TreasuryDisplay"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("4_atp58")
expand_mode = 1
stretch_mode = 5

[node name="WoodLabel" type="Label" parent="HBoxContainer/TreasuryDisplay"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Wood: 0"

[node name="FoodIcon" type="TextureRect" parent="HBoxContainer/TreasuryDisplay"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("5_ginhg")
expand_mode = 1
stretch_mode = 5

[node name="FoodLabel" type="Label" parent="HBoxContainer/TreasuryDisplay"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Food: 0"

[node name="StoneIcon" type="TextureRect" parent="HBoxContainer/TreasuryDisplay"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6_6xg1l")
expand_mode = 1
stretch_mode = 5

[node name="StoneLabel" type="Label" parent="HBoxContainer/TreasuryDisplay"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Stone: 0"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/TreasuryDisplay"]
layout_mode = 2

[node name="PeasantIcon" type="TextureRect" parent="HBoxContainer/TreasuryDisplay"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("7_fo3c6")
expand_mode = 1
stretch_mode = 5

[node name="PeasantLabel" type="Label" parent="HBoxContainer/TreasuryDisplay"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Villagers: 0"

[node name="ThrallIcon" type="TextureRect" parent="HBoxContainer/TreasuryDisplay"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("8_w1kt5")
expand_mode = 1
stretch_mode = 5

[node name="ThrallLabel" type="Label" parent="HBoxContainer/TreasuryDisplay"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Thralls: 0"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/TreasuryDisplay"]
layout_mode = 2
